elastic/ingress-tls.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-elastic
  namespace: elastic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - es.cuiqingcai.com
      secretName: tls-es-cuiqingcai-com
    - hosts:
        - kibana.cuiqingcai.com
      secretName: tls-kibana-cuiqingcai-com
  rules:
    - host: es.cuiqingcai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch-master
              servicePort: 9200
    - host: kibana.cuiqingcai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 443
